Utworzono za pomocą Colab

--- a/07_FoodVisionBig_tm.ipynb
+++ b/07_FoodVisionBig_tm.ipynb
@@ -11,6 +11,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This is a .ipyng file for Google Colab use.\n",
+        "The program creates a deep learning classification model using Tensorflow, based on an existing image recognition model, trains it on a set of photos of food from 101 classes and enables model evaluation."
+      ],
+      "metadata": {
+        "id": "0tw4R6f4-0P9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
